[package]
name = "sra"
description = "A collection of spaced repetition algorithms"
version = "0.1.0"
edition = "2021"
keywords = ["spaced-repetition", "supermemo"]
categories = ["algorithms"]
repository = "https://github.com/k0ur0x/sra"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
